--- a/src/app/components/album-entry/album-entry.component.scss
+++ b/src/app/components/album-entry/album-entry.component.scss
@@ -14,9 +14,6 @@
 
         &__header,
         &__footer {
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
             background: var(--bs-gray-200);
         }
 
@@ -34,6 +31,13 @@
 
         &__images {
             width: 100%;
+        }
+
+        &__link {
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
     }
 }
