added albums test

--- a/src/app/components/page-album/page-album.component.html
+++ b/src/app/components/page-album/page-album.component.html
@@ -11,6 +11,7 @@
                 <div class="search-filters">
                     <div class="search-filters__list">
                         <input class="search-filters__entry search-filters__input"
+                            data-ui-test="search-term"
                             placeholder="Search"
                             [ngModel]="searchTerm$ | async"
                             (ngModelChange)="setSearchTerm($event)">
