--- a/src/app/components/photo-entry/photo-entry.component.html
+++ b/src/app/components/photo-entry/photo-entry.component.html
@@ -1,4 +1,5 @@
-<div class="photo-entry__content">
+<div class="photo-entry__content"
+    [attr.data-ui-test]="'photo-entry-' + photo.id">
     <div class="photo-entry__image-wrapper">
         <img [src]="photo.url"
             class="photo-entry__image">
