improved posts table

--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -33,6 +33,12 @@
                 class="page-posts__data">
                 <div class="page-posts__table-wrapper">
                     <table class="posts-table">
+                        <colgroup>
+                            <col width="5%">
+                            <col width="10%">
+                            <col width="55%">
+                            <col width="30%">
+                        </colgroup>
                         <thead>
                             <tr>
                                 <th class="posts-table__cell posts-table__cell--head"
